bk_ida/gccida/g1/move_by_pieces
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/expr.c:1859:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/expr.c:1860:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/expr.c:1865:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode i; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/expr.c:1866:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code insn_code; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/expr.c:1870:4: error: expected ';' after expression
rtx v21; // [rsp+10h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/expr.c:1870:5: error: use of undeclared identifier 'v21'
rtx v21; // [rsp+10h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/expr.c:1951:10: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
genfun = insn_data_0[insn_code].genfun; 
         ^~~~~~~~~~~
         insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/expr.c:1956:1: error: use of undeclared identifier 'v21'
v21 = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/expr.c:1965:1: error: use of undeclared identifier 'v21'
v21 = adjust_automodify_address_1( to, v10, to_addr, v9, 1); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/expr.c:1967:1: error: use of undeclared identifier 'v21'
v21 = adjust_address_1( to, v10, v9, 1, 1); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/expr.c:1975:15: error: use of undeclared identifier 'v21'
v15 = genfun( v21, v14); 
              ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_by_pieces/src/obj/expr.o] Error 1
